# SBUSParser

./: CMakeLists.txt  README.md
cmake_scripts/: set_default_properties.cmake
include/: parse_sbus.h  print_sbus_decode.h  sbus_defs.h
src/: parse_sbus.c  print_sbus_decode.c
tests/: CMakeLists.txt  run_tests.sh
tests/src/: parsing_test.c  raw_data_bigger_then_decode_buffer_test.c  raw_data_lower_then_decode_buffer_test.c
